@@ -171,6 +171,20 @@ Affiliation: Sun Microsystems.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html</a>
 </P>
 
+<P>6. BASTIEN NOCERA<br />
+&quot;
+I've been a GNOME developer for more than 2 years now, starting as an
+independant application developer, and finding myself more and more
+involved in work on the core desktop.
+<br />
+I have never before been part of such a board, but I understand the
+requisites for such a position, and will do everything to represent
+the people voting for me.
+&quot;<br />
+Affiliation: Red Hat.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00003.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00003.html</a>
+</P>
+
 <center>
 <P>
 <BR><BR>
