@@ -1,5 +1,9 @@
 2002-11-03  Vincent Untz  <vincent@vuntz.net>
 
+	* ballot-summary.html: another candidate.
+
+2002-11-03  Vincent Untz  <vincent@vuntz.net>
+
 	* ballot-summary.html: three new candidates.
 
 2002-10-30  Vincent Untz  <vincent@vuntz.net>
